# OpenManufacturing

./: .flake8  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.mac  Dockerfile.new  Dockerfile.original  README.md  docker-build-push.sh  docker-compose.yml.new  docker-compose.yml.original  docker-login.sh  environment.yml  install_dependencies.sh  main.txt  pyproject.toml  requirements.txt  run.py  setenv.sh  setup.py  switch-docker-config.sh  your_script.py
.github/workflows/: ci.yml
docs/getting_started/: implementation_strategy.md
monitoring/: prometheus.yml
openmanufacturing/: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  __init__.py  cli.py  main.py  pyproject.toml
openmanufacturing.egg-info/: SOURCES.txt  requires.txt  top_level.txt
openmanufacturing/api/: __init__.py  dependencies.py  main.py
openmanufacturing/api/models/: __init__.py  device.py
openmanufacturing/api/routes/: __init__.py  alignment.py  auth.py  devices.py  process.py  workflow.py
openmanufacturing/core/: __init__.py
openmanufacturing/core/agents/: alignment_agent.py  base_agent.py  orchestrator.py  process_agent.py
openmanufacturing/core/alignment/: __init__.py  alignment_engine.py  service.py
openmanufacturing/core/database/: __init__.py  db.py  models.py  session.py
openmanufacturing/core/hardware/: __init__.py  motion_controller.py
openmanufacturing/core/process/: __init__.py  calibration.py  workflow_manager.py
openmanufacturing/core/vision/: __init__.py  image_processing.py
openmanufacturing/docs/: index.md
openmanufacturing/docs/deployment/: macos_guide.md
openmanufacturing/docs/getting_started/: implementation_strategy.md
openmanufacturing/integrations/ai/: openai_client.py
openmanufacturing/scripts/: install.sh
openmanufacturing/src/api/: __init__.py  dependencies.py  main.py
openmanufacturing/src/api/routes/: __init__.py
openmanufacturing/src/core/: __init__.py
openmanufacturing/src/core/alignment/: __init__.py
openmanufacturing/src/core/database/: __init__.py
openmanufacturing/src/core/hardware/: __init__.py
openmanufacturing/src/core/process/: __init__.py
openmanufacturing/src/core/vision/: __init__.py
openmanufacturing/src/integrations/: __init__.py
openmanufacturing/src/openmanufacturing/: __init__.py
openmanufacturing/src/openmanufacturing/api/: dependencies.py  main.py
openmanufacturing/src/openmanufacturing/api/routes/: __init__.py  alignment.py  auth.py  devices.py  process.py  workflow.py
openmanufacturing/src/openmanufacturing/core/: __init__.py  security.py
openmanufacturing/src/openmanufacturing/core/alignment/: __init__.py  alignment_engine.py  service.py
openmanufacturing/src/openmanufacturing/core/database/: __init__.py  db.py  models.py
openmanufacturing/src/openmanufacturing/core/hardware/: __init__.py
openmanufacturing/src/openmanufacturing/core/process/: __init__.py  calibration.py  workflow_manager.py
openmanufacturing/src/openmanufacturing/core/vision/: __init__.py
openmanufacturing/src/openmanufacturing/integrations/: __init__.py
openmanufacturing/src/ui/: __init__.py  package.json  tauri.conf.json
openmanufacturing/src/ui/OpenManufacturing/: package.json
openmanufacturing/src/ui/OpenManufacturing/src-tauri/: Cargo.toml  tauri.conf.json
openmanufacturing/src/ui/OpenManufacturing/src-tauri/src/: main.rs
openmanufacturing/src/ui/src/components/: AlignmentDashboard.tsx
openmanufacturing/tests/: __init__.py
openmanufacturing/tests/unit/: __init__.py
openmanufacturing/tests/unit/alignment/: __init__.py
openmanufacturing/tests/unit/api/: __init__.py
openmanufacturing/tests/unit/api/routes/: __init__.py  test_process.py
src/: __init__.py
src/api/: dependencies.py  main.py
src/api/routes/: alignment.py  auth.py  workflow.py
src/core/: __init__.py
src/core/agents/: alignment_agent.py  base_agent.py
src/core/alignment/: alignment_engine.py
src/core/database/: models.py
src/core/process/: calibration.py  workflow_manager.py
src/core/vision/: __init__.py  image_processing.py
src/cpp/alignment/: fast_align.cpp  fast_align.h
src/ui/: tauri.conf.json
tests/: __init__.py
tests/unit/: __init__.py
tests/unit/alignment/: __init__.py  test_alignment_engine.py
tests/unit/api/: __init__.py
tests/unit/api/routes/: __init__.py  test_auth.py  test_process.py
